# steam_shortcuts_util

./: Cargo.toml  crates-io.md  readme.md
benches/: bencharmks.rs
src/: app_id_generator.rs  lib.rs  shortcut.rs  shortcuts_parser.rs  shortcuts_writer.rs
src/testdata/: broken_shortcut.url  failing.vdf  linux_shortcut.vdf  shortcuts.vdf  shortcuts2.vdf  shortcuts_broken.vdf  shortcutsfirefox.vdf  shortcutsspore.vdf  steam_rom_manager.vdf
