[package]
name = "steam_shortcuts_util"
version = "1.1.6"
edition = "2018"

authors = ["Philip Kristoffersen <philipkristoffersen@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Utilities for parsing & writing Steams shortcut.vdf file format"
repository = "https://github.com/PhilipK/steam_shortcuts_util"
documentation = "https://docs.rs/steam_shortcuts_util/0.1.0/steam_shortcuts_util/"
keywords = ["api", "steam", "parser"]
categories = ["parser-implementations"]
readme = "crates-io.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
nom_locate = "^4.0"
nom = "^7.1.1"
ascii = "^1.0.*"
crc32fast = "^1.2.*"
